# 6d_soft_grasping

./: README.md  requirements.txt
grasp_detection/: CMakeLists.txt  ToDos.txt  package.xml
grasp_detection/config/: cam_config.yaml  fake_params.yaml  l_calib_params.yaml  r_calib_params.yaml
grasp_detection/launch/: NN_nodes.launch
grasp_detection/scripts/: CameraComunicator.py  NN_Node.py
impose_grasp/: CMakeLists.txt  README.md  intrinsic_matrix.txt  requirements.txt  setup.py
impose_grasp/config/: params.yaml  target_object.yaml
impose_grasp/launch/: Rt_publisher.launch  fake_obj_br.launch  gr_detection.launch  hand_eye_calibration.launch  mesh_gr_detection.launch  obj_broadcaster.launch  obj_det.launch  obj_detection.launch  pointcloud.launch  system.launch  target_pub.launch
impose_grasp/scripts/: camera_thread.py  test_realsense.py  thread.py  thread2.py
impose_grasp/src/: camera_img_publisher_node.py  fake_grasp_broadcaster.py  fake_obj_broadcaster.py  fake_obj_broadcaster_node.py  grasp_broadcaster_node.py  grasps_plotter_node.py  img_publisher_node.py  mesh_grasp_br_node.py  numpy_img_listener_node.py  obj_proj_img_publisher_node.py  obj_to_cam_rt_publisher_node.py  object_broadcaster_node.py  pcd_publisher.py  pcd_publisher_node.py  rt_publisher_node.py  stereo_imgaes_publisher.py  target_grasp_publisher_node.py  test_duck_positioning.py
model/: GraspDetector.py  model_usage.ipynb
model/.ipynb_checkpoints/: model_usage-checkpoint.ipynb
moveit_config_panda_qb/: .setup_assistant  CMakeLists.txt  package.xml
moveit_config_panda_qb/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  qbhand.srdf
moveit_config_panda_qb/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  moveit.rviz  (+11 more)
moveit_config_qb2m_panda/: .setup_assistant  CMakeLists.txt  package.xml
movit_config_only_panda/: .setup_assistant  CMakeLists.txt  package.xml
movit_config_panda_qb/: .setup_assistant  CMakeLists.txt  package.xml
movit_config_panda_qb_2/: .setup_assistant  CMakeLists.txt  package.xml
movit_config_panda_qb_4/: .setup_assistant  CMakeLists.txt  package.xml
movit_config_panda_qb_5/: .setup_assistant  CMakeLists.txt  package.xml
movit_config_pandaqb/: .setup_assistant  CMakeLists.txt  package.xml
movit_config_pandaqb3/: .setup_assistant  CMakeLists.txt  package.xml
movit_panda_gripper/: .setup_assistant  CMakeLists.txt  package.xml
panda_moveit_config/: .setup_assistant  package.xml
panda_qb_description/: CMakeLists.txt  package.xml
panda_qb_gazebo/: CMakeLists.txt  package.xml
pandaqb_movegroup_control/: CMakeLists.txt  README.md  ToDos.md  package.xml
pandaqb_movegroup_control/config/: callibration_joint_states.yaml  dummy_nn_node.yaml  fake_params.yaml  move_group_params.yaml
pandaqb_movegroup_control/include/pandaqb_movegroup_control/CameraAPIs/: camera.h  image_handler.h
pandaqb_movegroup_control/include/pandaqb_movegroup_control/Control/: ArmController.h  Controller.h  EEFController.h  GripperController.h  HandController.h
pandaqb_movegroup_control/include/pandaqb_movegroup_control/ControllerAPIs/: controller.h  grasper.h  hand_group.h  manipulator.h  move_group.h  target_aproacher.h
pandaqb_movegroup_control/include/pandaqb_movegroup_control/ControllerAPIs/MoveIt/: move_group.h  planning_scene.h
pandaqb_movegroup_control/include/pandaqb_movegroup_control/Experiments/: GraspRegisterer.h  PinchVsPower.h
pandaqb_movegroup_control/include/pandaqb_movegroup_control/Grasp/: Grasp.h  GraspExecuter.h  GraspRequester.h  HandController.h  HandControllerBase.h  QbHandPub.h
pandaqb_movegroup_control/include/pandaqb_movegroup_control/MatrixManipulation/: ObjWorldTransformer.h  obj_w_Rt_publisher.h
pandaqb_movegroup_control/include/pandaqb_movegroup_control/MoveGroup/: BaseMoveGroup.h  GroupMover.h  InfoTriggerMG.h  RobotMover.h
pandaqb_movegroup_control/include/pandaqb_movegroup_control/TargetObject/: ObjectBase.h
pandaqb_movegroup_control/launch/: arm_world_gazebo.launch  camera_calibration.launch  controller.launch  controller_node.launch  moveit_panda_qb_hand.launch  panda.launch  qb_hand2.launch  real_panda_control.launch  robot_only.launch
pandaqb_movegroup_control/launch/nodes/: camera_and_NN_nodes.launch  camera_node.launch  controller_node.launch  nn_node.launch
pandaqb_movegroup_control/meshes/: around_support.stl  camera_support.stl
pandaqb_movegroup_control/msg/: Grasp.msg  Sinergies.msg
pandaqb_movegroup_control/scripts/: NN_Node.py
pandaqb_movegroup_control/src/: PlacePoseBroadcaster.cpp  camera_callibration_control.cpp  camera_node.cpp  controller_node.cpp  experiment_recorder.cpp  grasp_server.cpp  grasps_register_node.cpp  matrix_publisher_node.cpp  object_publisher_node.cpp  scene_objects_publisher.cpp  test_controller.cpp  test_target_approacher.cpp  waypoints_with_time.cpp
pandaqb_movegroup_control/src/CameraAPIs/: camera.cpp  image_handler.cpp
pandaqb_movegroup_control/src/Control/: ArmController.cpp  Controller.cpp  EEFController.cpp  GripperController.cpp  HandController.cpp
pandaqb_movegroup_control/src/ControllerAPIs/: controller.cpp  grasper.cpp  hand_group.cpp  manipulator.cpp  move_group.cpp  target_approacher.cpp
pandaqb_movegroup_control/src/Experiments/: GraspRegisterer.cpp  PinchVsPower.cpp
pandaqb_movegroup_control/src/Grasp/: GraspExecuter.cpp  HandController.cpp  HandControllerBase.cpp  QbHandPub.cpp
pandaqb_movegroup_control/src/MatrixManipulation/: ObjWorldTransformer.cpp  obj_w_Rt_publisher.cpp
pandaqb_movegroup_control/src/MoveGroup/: BaseMoveGroup.cpp  GroupMover.cpp  InfoTriggerMG.cpp  RobotMover.cpp
pandaqb_movegroup_control/src/TargetObject/: TargetObject.cpp
pandaqb_movegroup_control/srv/: DetectGrasp.srv  GraspingService.srv  RequestGrasp.srv
pandaqb_movegroup_control/urdf/: AroundSupport.xacro  camera_support.xacro  only_panda_description.urdf.xacro  only_panda_robot.xacro  pandaqb.urdf.xacro  pandaqb_description.urdf.xacro  pandaqb_robot.xacro
qb2m_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+430 files in other folders)
